creusot/tests/should_fail/prusti/traits/bound.stderr
warning: ambiguous dereference
  --> bound.rs:14:26
   |
14 |         at_expiry::<'x>(*x)
   |                          ^
   |
   = note: `#[warn(creusot::prusti_ambiguity)]` on by default

error[creusot]: the expression's lifetime `'a` must match the current time slice `'u` (found `&'a mut Y`, expected `&'u mut Y`)
  --> bound.rs:13:5
   |
13 |     fn test<'x, Y: Copy>(x: &'x mut Y) -> Y {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

